--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		
 		let lucid;
 
-		const fieldsSchema = Data.Tuple([
+		const datumSchema = Data.Tuple([
 			Data.Bytes(),
 			Data.Integer(),
 			Data.Integer(),
@@ -65,15 +65,6 @@
 			Data.Nullable(Data.Integer()),
 			Data.Bytes(),
 			Data.Bytes()
-		]);
-
-		const datumSchema = Data.Enum([
-			Data.Object({ Rental: fieldsSchema })
-		]);
-
-		const redeemerSchema = Data.Enum([
-			Data.Object({ Rent: Data.Tuple([Data.Integer()]) })
-			// Add other redeemers if needed, e.g., Data.Object({ Reclaim: Data.Literal() })
 		]);
 
 		async function initLucid() {
@@ -133,8 +124,7 @@
 			const utxos = await lucid.utxosAt(scriptAddress);
 			for (const utxo of utxos) {
 				if (Object.keys(utxo.assets).some(asset => asset !== 'lovelace')) {
-					const datumObj = Data.from(utxo.datum, datumSchema);
-					const datum = datumObj.Rental;
+					const datum = Data.from(utxo.datum, datumSchema);
 
 					if (!datum[5]) { // Only show available (not rented)
 						const name = hexToString(datum[8]);
@@ -176,21 +166,17 @@
 				const lenderAddress = await lucid.wallet.address();
 				const lenderPkh = lucid.utils.getAddressDetails(lenderAddress).paymentCredential.hash;
 
-				const datumValue = {
-					Rental: [
-						lenderPkh,
-						BigInt(daily_fee),
-						BigInt(min_days),
-						BigInt(max_days),
-						auto_relist,
-						null,
-						null,
-						nft_policy,
-						nft_name
-					]
-				};
-
-				const datum = Data.to(datumValue, datumSchema);
+				const datum = Data.to([
+					lenderPkh,
+					BigInt(daily_fee),
+					BigInt(min_days),
+					BigInt(max_days),
+					auto_relist,
+					null,
+					null,
+					nft_policy,
+					nft_name
+				], datumSchema);
 
 				const assets = {
 					[`${nft_policy}${nft_name}`]: 1n,
@@ -207,13 +193,13 @@
 				document.getElementById('listStatus').textContent = `Rental listed! Tx: ${txHash}`;
 				await populateRentalPicker(); // Refresh rentals after listing
 			} catch (error) {
-				document.getElementById('listStatus').textContent = `Error: ${error.message}`;
+				document.getElementById'listStatus').textContent = `Error: ${error.message}`;
 			}
 		});
 
 		document.getElementById('rentButton').addEventListener('click', async () => {
 			try {
-				const days = parseInt(document.getElementById('days').value);
+				const days = parseInt(document.getElementById'('days').value);
 				const selectedRental = document.getElementById('rental_picker').value;
 				if (!selectedRental || days <= 0) throw new Error('Invalid rental selection or days');
 
@@ -222,8 +208,7 @@
 				if (!escrowUtxo) throw new Error('Selected escrow UTxO not found');
 
 				// Read datum from UTxO
-				const datumObj = Data.from(escrowUtxo.datum, datumSchema);
-				const datum = datumObj.Rental;
+				const datum = Data.from(escrowUtxo.datum, datumSchema);
 
 				if (days < datum[2] || days > datum[3]) throw new Error('Days out of range');
 				if (datum[5]) throw new Error('Already rented');
@@ -232,7 +217,7 @@
 				const renterAddress = await lucid.wallet.address();
 				const renterPkh = lucid.utils.getAddressDetails(renterAddress).paymentCredential.hash;
 
-				// Calculate deadline (current time + days * ms per day)
+				// Calculate deadline
 				const response = await fetch(`${blockfrostUrl}/blocks/latest`, {
 					headers: { 'project_id': blockfrostKey }
 				});
@@ -247,24 +232,20 @@
 				const deadline = currentTime + (days * 86400000); // Use lower bound approximation
 
 				// Updated datum
-				const updatedDatumValue = {
-					Rental: [
-						datum[0],
-						datum[1],
-						datum[2],
-						datum[3],
-						datum[4],
-						renterPkh,
-						BigInt(deadline),
-						datum[7],
-						datum[8]
-					]
-				};
-				const updatedDatum = Data.to(updatedDatumValue, datumSchema);
+				const updatedDatum = Data.to([
+					datum[0],
+					datum[1],
+					datum[2],
+					datum[3],
+					datum[4],
+					renterPkh,
+					BigInt(deadline),
+					datum[7],
+					datum[8]
+				], datumSchema);
 
 				// Redeemer for Rent
-				const redeemerValue = { Rent: [BigInt(days)] };
-				const redeemer = Data.to(redeemerValue, redeemerSchema);
+				const redeemer = Data.to(new Constr(0, [BigInt(days)]));
 
 				// Payment to lender
 				const fee = datum[1] * BigInt(days);
