--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 				document.getElementById('listStatus').textContent = `Rental listed! Tx: ${txHash}`;
 				await populateRentalPicker(); // Refresh rentals after listing
 			} catch (error) {
-				document.getElementById'listStatus').textContent = `Error: ${error.message}`;
+				document.getElementById('listStatus').textContent = `Error: ${error.message}`;
 			}
 		});
 
