--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	<title>Cardano NFT Book Rental DApp</title>
 </head>
 <body>
+	<style>
+		body { background-color: black; color: #aeaeae}
+	</style>
 	<h1>Rent a Book NFT on Cardano Preprod</h1>
 	<p>Connect your Eternl wallet on Preprod network.</p>
 	
