--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<style>
-		body { background-color: black; color: #aeaeae}
+		body { background-color: rgb(63, 63, 63); color: #d6d6d6}
 	</style>
 	<h1>Rent a Book NFT on Cardano Preprod</h1>
 	<p>Connect your Eternl wallet on Preprod network.</p>
