--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
 		import { Blockfrost, Lucid, Data, Constr } from "https://unpkg.com/lucid-cardano@0.10.7/web/mod.js";
 
 		const scriptAddress = 'addr_test1wzvnyvs6at8sk56yvca400cjchzeeh3h5ednq5grczv2jag04uv5c'; // Replace with aiken blueprint address renting_escrow.nft_rental output
-		const scriptHash = '9932321aeacf0b5344663b57bf12c5c59cde37a65b305103c098a975'; // From plutus.json
+		// This should be the actual compiled script CBOR hex, not just the hash
+		// You need to get this from your Aiken build output (plutus.json or similar)
+		const scriptCBOR = 'YOUR_SCRIPT_CBOR_HEX_HERE'; // TODO: Replace with actual script CBOR
 		const blockfrostKey = 'preprod5njBajXTux1u0d7vJCH9kOgsvPCDIe6W'; // Hardcoded for POC - replace with your actual key
 		
 		let lucid;
