--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Cardano NFT Book Rental DApp</title>
-	<script type="module" src="https://unpkg.com/@meshsdk/core@latest/dist/index.js"></script>
+	<script src="https://unpkg.com/@meshsdk/core@latest/dist/index.js"></script>
 </head>
 <body>
 	<h1>Rent a Book NFT on Cardano Preprod</h1>
